--- a/css/main.css
+++ b/css/main.css
@@ -948,6 +948,8 @@ body {
   width: 24px;
   height: 2px;
   background: black;
+  transform: rotate(0);
+  transition: all 0.5s;
 }
 
 .hamburger-middle {
@@ -968,7 +970,7 @@ body {
 }
 
 .open .hamburger-middle {
-  display: none;
+  transform: rotate(-45deg) translateY(6px) translate(-6px);
 }
 
 .open .hamburger-bottom {
